	* arch/arm/src/sama5/sam_usbhost.h and include/nuttx/usb/usbhost_trace.h
	  Correct some inconsistencies in the way that USB configuration
	  settings are used.  This caused compilation errors in SAMA5 OHCI
	  when USB debug was ON but USB host tracing was off (2013-9-19).
	* nuttx/arch/arm/src/sama5/sam_clockconfig.c:  When 480MHz UPLL
	  is used to drive OHCI, it should have a divider of 10.  However,
	  that does not work.  A divider of 5 does.  Why? (2013-9-19).
	* Several USB device driver files:  Change naming of SELFPOWERED
	  and REMOTEWAKEUP to avoid name collisions.  Prepend the name
	  of the driver (for example CDCACM_SELFPOWERED) (201309-20).
	* configs/sama5d3x-ek/nsh and demo: Increase the number of pre-allocated
	  watchdog timers.  The default number of 4 was easily being exhausted
	  in the more complex configurations.  Enable the task name feature
	  to provide prettier ps command output.  src/sam_usb.c:  Use more
	  descriptive task names when starting the EHCI and OHCI monitor tasks
	  (2013-9-20).
	* arch/arm/src/sama5/sam_ohci.c:  Fix a place where DMA-related data
	  needed to be flushed to data cache; Fix another where a virtual address
	  was being used in a register where a physical address was required
	  (2013-9-20).
	* arch/arm/src/armv7-a/cp15_clean_dcache.S and cp15_flush_dcache.S:
	  fix an error in the alignment of addresses to cache line boundaries
	  (2013-9-21).
	* drivers/usbdev/cdcacm_desc.c:  Change the interval for the interrupt
	  endpoint from 0xff (invalid) to 10.  This is not a critical change
	  but will avoid a complaint from the Linux driver when it overrides
	  the 0xff value (2013-9-22).
	* configs/zkit-arm-1769:  LED1 is not user controllable after booting.
	  From Rashid Fatah (2013-9-23).
	* arch/arm/src/sama5/sam_hsmci.c:  TX DMA disabled.  It is just not
	  reliable. No idea why.  RX DMA is still used (2013-9-23).
	* driver/net/encx24j600.c:  UDP/RXAVAIL backlog support from Max
	  Holtzberg (2013-9-24).
