@@ -44,6 +44,7 @@ endchoice
 config ARCH_FAMILY_AVR
 	bool
 	default y			if ARCH_CHIP_ATMEGA128 || ARCH_CHIP_AT90USB646 || ARCH_CHIP_AT90USB647 || ARCH_CHIP_AT90USB1286 || ARCH_CHIP_AT90USB1287
+	select ARCH_HAVE_STACKCHECK
 
 config ARCH_FAMILY_AVR32
 	bool
