@@ -5623,4 +5623,6 @@
 	  reliable. No idea why.  RX DMA is still used (2013-9-23).
 	* driver/net/encx24j600.c:  UDP/RXAVAIL backlog support from Max
 	  Holtzberg (2013-9-24).
+	* Standardized stack checking logic so the interfaces can be used
+	  by common stack monitoring logic (2013-9-24).
 
